# win_cmake_proto

./: .gitignore  CMakeLists.txt  README.md  test.cpp  test.out  test.proto
